--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CINEMA.FO</title>
+    <title>CINEMA.BZ</title>
     <link rel="icon" type="image/svg+xml" href="/logo-icon.svg" />
     <link rel="icon" type="image/png" href="/logo-icon.svg" />
-    <meta name="description" content="CINEMA.FO - Stream your favorite movies and TV shows" />
+    <meta name="description" content="CINEMA.BZ - Stream your favorite movies and TV shows" />
     <meta name="theme-color" content="#1e40af" />
   </head>
   <body>
